<resources>
    <string name="app_name">Fonts For Cricut</string>
    <string name="fonts_for_cricut">Fonts For Cricut</string>
    <string name="search_fonts">Search Fonts</string>
    <string name="image">image</string>
    <string name="font">Font</string>
    <string name="mono">Monogram</string>
    <string name="lobster">Font Applied Text</string>
    <string name="mo">ABC</string>
    <string name="setting">Setting</string>
    <string name="font_name">Font Name</string>
    <string name="defaultText">Default</string>
    <string name="uppercase">Uppercase</string>
    <string name="lowercase">Lowercase</string>
    <string name="how_to_import_this_font">How to import this font?</string>
    <string name="install_font">Install Font</string>
    <string name="mo2">Abs</string>
    <string name="operation">Operation ?</string>
    <string name="cut">Cut</string>
    <string name="draw">Draw</string>
    <string name="sign">Size</string>
    <string name="Size">50</string>
    <string name="pro">Pro</string>
    <string name="continue_with_free_plan">Continue With Free Plan</string>
    <string name="no_commitment">No Commitment. Cancel anytime.</string>
    <string name="subscription_start">Subscription Start</string>
    <string name="purchase_start">Purchase</string>
    <string name="basic">Basic</string>

    <string name="_3_days_trial">Try 3 Days Free Trial</string>
    <string name="then">Then</string>
    <string name="year_after">/Year After Trial</string>
    <string name="prices">Prices</string>
    <string name="weekly">Weekly</string>
    <string name="month">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="life_time">Lifetime</string>
    <string name="_50_noff">50%\nOFF</string>
    <string name="_82_noff">82%\nOFF</string>
    <string name="already_subscribed">Already Subscribed</string>
    <string name="internet_not_connected">Internet not connected.</string>

    <string name="choose_one">Choose One</string>
    <string name="get_pro">Get Pro</string>
    <string name="skip">SKIP</string>
    <string name="next">Next</string>
    <string name="find_the_best_fonts_for">1000+ Cricut Fonts</string>
    <string name="your">Your</string>
    <string name="next_craft">Next Craft</string>
    <string name="find_the_best_monograms">Find The Best Monograms</string>
    <string name="for_your">For Your</string>
    <string name="how_our_fonts_or">How Our Fonts Or Monograms Look On Your</string>
    <string name="craft">Craft</string>
    <string name="create_stunning_design_crafts_with_our_ncricut_monograms">Unleash your creativity with 1000+ fonts - the ultimate Cricut companion!</string>
    <string name="cricut_fonts">CRICUT FONTS</string>
    <string name="create_stunning_crafts_with_cricut_fonts">Create Stunning Crafts With Cricut Fonts</string>
    <string name="unlock_premium_features">Unlock Premium Features</string>
    <string name="you_can_buy_any_premium_subscription_and_enjoy_unlimited_fonts_and_monograms">You can buy any premium subscription and enjoy unlimited fonts and monograms</string>
    <string name="unlock_all_premium_fonts">Unlock all Premium Fonts.</string>
    <string name="unlock_all_premium_monograms">Unlock all Premium Monograms.</string>
    <string name="choose_plan">Choose Plan</string>
    <string name="lite">LITE</string>
    <string name="golden">GOLDEN</string>
    <string name="diamond">DIAMOND</string>
    <string name="per_week">Per Week</string>
    <string name="per_month">Per Month</string>
    <string name="per_year">Per Year</string>
    <string name="life_time_space">Life Time</string>
    <string name="craft_your_masterpiece_with_the_perfect_font_discover_your_style_today">Craft your masterpiece with the perfect font - discover your style today!</string>
    <string name="create_stunning_designs_on_any_cricut_machine_with_our_versatile_fonts_and_monograms">Create stunning designs on any Cricut machine with our versatile fonts and monograms!</string>

</resources>